tests/suite/fail/types/if_type_mismatch.ny
fn main() {
    let x = if true { 1 } else { "no" } //~ ERROR If expression branches
}
